...
  }
  
  /// Nombre legible
  String get displayName {
    switch (this) {
      case BattleFrequency.daily:
        return 'Diario';
      case BattleFrequency.severalPerWeek:
        return 'Varias veces por semana';
      case BattleFrequency.weekly:
        return 'Semanal';
      case BattleFrequency.occasional:
        return 'Ocasional';
...
